fix spacing and formatting on thumbnail details

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -164,6 +164,7 @@ h5 {
 .thumbnail p {
     font-family: "VT323";
     font-size: 14pt;
+    line-height: 1em;
 }
 
 .filters {
